# multi_node_ROS2

./: .gitattributes  README.md
ORB_SLAM3/: CMakeLists.txt  build.sh
ORB_SLAM3/Examples/RGB-D/: custom_camera.yaml
Open3D/: CMakeLists.txt
image_loader_node/: CMakeLists.txt  package.xml
image_loader_node/src/: image_loader_node.cpp
my_launch_package/: CMakeLists.txt  package.xml
my_launch_package/launch/: launch_nodes_in_sequence.launch.py
point_cloud_stitcher_node/: CMakeLists.txt  package.xml
point_cloud_stitcher_node/src/: point_cloud_stitcher_node.cpp  sync.cpp
visual_odometry_node/: CMakeLists.txt  package.xml
visual_odometry_node/launch/: visual_odometry_launch.py
visual_odometry_node/src/: visual_odometry_node.cpp
